[package]
name = "str0m-docker"
version = "0.1.0"
edition = "2024"

[dependencies]
str0m = "0.11.1"
rouille = { version = "3.6.2", features = ["ssl"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
systemstat = "0.2.2"
regex = "1.11.1"
rand = "0.9.0"
